[package]
name = "rnd"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image", "advanced"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
zbus = { version = "5.1.1", features = ["tokio"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
iced_layershell = "0.13.0"
iced_runtime = { version = "0.13.2", features = ["multi-window"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3